--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap; /* Щоб текст і картинка могли переноситися */
+  flex-wrap: wrap; 
 }
 
 .text-content {
@@ -55,6 +55,33 @@ body {
   height: auto;
   border-radius: 15px;
   object-fit: cover;
+}
+.education-activity {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.education-activity h3 {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.disciplines {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  justify-items: center;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #aaa;
+  background-color: #f2f2f2;
+}
+
+.discipline {
+  background-color: #e5e5e5;
+  padding: 20px 30px;
+  border-radius: 8px;
+  font-weight: bold;
 }
 
 .scientific-activity {
